--- a/tweaks/index.html
+++ b/tweaks/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
 <html>
-  <h1>test</h1>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>test</title>
+  </head>
+  <body>
+    <h1>test</h1>
+  </body>
 </html>
